# LapTrinhPython_DoAnGiuaKy_Yara

./: .env.example  .gitignore  README.md  app.py  config.py  get_malware_data.py  main.py  malware_data_filter.py  pyproject.toml  requirements.txt  scanner.py  tui.py
common/: utils.py
data/: malware_signatures.csv  malware_signatures.json
data_tools/: __init__.py  data_loader.py  db_setup.py  pipeline.py
database/: 01_create_database.sql  02_create_tables.sql  create_schema.sql
gui/: main_window.py
gui/components/: history_panel.py  log_panel.py  results_panel.py
logs/: scan_report_20260319_140451.txt  scan_report_20260319_140507.txt
malware_scanner/: __init__.py  archive.py  cli.py  db.py  engine.py  exceptions.py  reporting.py  scan_runtime.py  scanner.py  service.py  ui.py  utils.py
malware_scanner/archive/: _7z.py  rar.py  scanner.py  types.py  zip.py
malware_scanner/detection/: anti_evasion.py  hashing.py  scan_variants.py  yara_engine.py
overview/: architecture.md  contributing.md  features.md  file-structure.md  roadmap.md
rules/: agent_tesla.yar  conti.yar  dridex.yar  emotet.yar  formbook.yar  index.yar  lockbit.yar  lokibot.yar  mirai.yar  njrat.yar  red_line_stealer.yar  remcos_rat.yar  ryuk.yar  trickbot.yar  wannacry.yar
samples/: test_emotet.txt  test_lockbit.txt  test_wannacry.txt
scripts/: app.py  data_sources.py  db_setup.py  get_malware_data.py  import_data.py  malware_data_filter.py  pipeline.py  utils.py  workflows.py
slides/: index.html  script.js  styles.css
src/: get_malware_data.py  malware_data_filter.py
tests/: generate_samples.py  test_archive.py  test_rule_coverage.py  test_scan_flow.py
tui/: app.py
(+35 files in other folders)
