[project]
name = "yara-malware-scanner"
version = "0.1.0"
description = "YARA malware scanner with hash-based detection and CustomTkinter GUI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-dotenv",
    "psycopg2-binary",
    "pandas",
    "yara-python",
    "customtkinter>=5.2.2",
    "olefile>=0.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
package = false
